# paradox_machine

./: .gitignore  README.md  examples.txt  pyproject.toml
docs/: full_process.md  intro.md
paradox_machine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: apis.py  demo.py  prompts.py
